[package]
name = "tree-sitter-kat-parsers"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Aggregate crate for kat-specific pre-generated tree-sitter parser crates"
authors = ["DCjanus <DCjanus@dcjanus.com>"]
include = ["src/lib.rs"]

[lib]
path = "src/lib.rs"

[dependencies]
tree-sitter-kat-actionscript = { path = "../tree-sitter-kat-actionscript" }
tree-sitter-kat-apache = { path = "../tree-sitter-kat-apache" }
tree-sitter-kat-applescript = { path = "../tree-sitter-kat-applescript" }
tree-sitter-kat-asciidoc = { path = "../tree-sitter-kat-asciidoc" }
tree-sitter-kat-asm = { path = "../tree-sitter-kat-asm" }
tree-sitter-kat-authorized-keys = { path = "../tree-sitter-kat-authorized-keys" }
tree-sitter-kat-awk = { path = "../tree-sitter-kat-awk" }
tree-sitter-kat-bibtex = { path = "../tree-sitter-kat-bibtex" }
tree-sitter-kat-cabal = { path = "../tree-sitter-kat-cabal" }
tree-sitter-kat-cmakecache = { path = "../tree-sitter-kat-cmakecache" }
tree-sitter-kat-coffeescript = { path = "../tree-sitter-kat-coffeescript" }
tree-sitter-kat-command-help = { path = "../tree-sitter-kat-command-help" }
tree-sitter-kat-cpuinfo = { path = "../tree-sitter-kat-cpuinfo" }
tree-sitter-kat-crontab = { path = "../tree-sitter-kat-crontab" }
tree-sitter-kat-crystal = { path = "../tree-sitter-kat-crystal" }
tree-sitter-kat-css = { path = "../tree-sitter-kat-css" }
tree-sitter-kat-csv = { path = "../tree-sitter-kat-csv" }
tree-sitter-kat-debsources = { path = "../tree-sitter-kat-debsources" }
tree-sitter-kat-dockerfile = { path = "../tree-sitter-kat-dockerfile" }
tree-sitter-kat-dot = { path = "../tree-sitter-kat-dot" }
tree-sitter-kat-dotenv = { path = "../tree-sitter-kat-dotenv" }
tree-sitter-kat-email = { path = "../tree-sitter-kat-email" }
tree-sitter-kat-fish = { path = "../tree-sitter-kat-fish" }
tree-sitter-kat-fortran-namelist = { path = "../tree-sitter-kat-fortran-namelist" }
tree-sitter-kat-fstab = { path = "../tree-sitter-kat-fstab" }
tree-sitter-kat-git-commit = { path = "../tree-sitter-kat-git-commit" }
tree-sitter-kat-git-config = { path = "../tree-sitter-kat-git-config" }
tree-sitter-kat-git-link = { path = "../tree-sitter-kat-git-link" }
tree-sitter-kat-git-log = { path = "../tree-sitter-kat-git-log" }
tree-sitter-kat-git-mailmap = { path = "../tree-sitter-kat-git-mailmap" }
tree-sitter-kat-git-rebase = { path = "../tree-sitter-kat-git-rebase" }
tree-sitter-kat-gitattributes = { path = "../tree-sitter-kat-gitattributes" }
tree-sitter-kat-gomod = { path = "../tree-sitter-kat-gomod" }
tree-sitter-kat-gosum = { path = "../tree-sitter-kat-gosum" }
tree-sitter-kat-gowork = { path = "../tree-sitter-kat-gowork" }
tree-sitter-kat-graphql = { path = "../tree-sitter-kat-graphql" }
tree-sitter-kat-hcl = { path = "../tree-sitter-kat-hcl" }
tree-sitter-kat-ignore = { path = "../tree-sitter-kat-ignore" }
tree-sitter-kat-jinja = { path = "../tree-sitter-kat-jinja" }
tree-sitter-kat-jq = { path = "../tree-sitter-kat-jq" }
tree-sitter-kat-just = { path = "../tree-sitter-kat-just" }
tree-sitter-kat-latex = { path = "../tree-sitter-kat-latex" }
tree-sitter-kat-less = { path = "../tree-sitter-kat-less" }
tree-sitter-kat-markdown = { path = "../tree-sitter-kat-markdown" }
tree-sitter-kat-markdown-inline = { path = "../tree-sitter-kat-markdown-inline" }
tree-sitter-kat-nasm = { path = "../tree-sitter-kat-nasm" }
tree-sitter-kat-ninja = { path = "../tree-sitter-kat-ninja" }
tree-sitter-kat-proto = { path = "../tree-sitter-kat-proto" }
tree-sitter-kat-query = { path = "../tree-sitter-kat-query" }
tree-sitter-kat-requirements = { path = "../tree-sitter-kat-requirements" }
tree-sitter-kat-sass = { path = "../tree-sitter-kat-sass" }
tree-sitter-kat-scss = { path = "../tree-sitter-kat-scss" }
tree-sitter-kat-sml = { path = "../tree-sitter-kat-sml" }
tree-sitter-kat-ssh-config = { path = "../tree-sitter-kat-ssh-config" }
tree-sitter-kat-strace = { path = "../tree-sitter-kat-strace" }
tree-sitter-kat-stylus = { path = "../tree-sitter-kat-stylus" }
tree-sitter-kat-svelte = { path = "../tree-sitter-kat-svelte" }
tree-sitter-kat-syslog = { path = "../tree-sitter-kat-syslog" }
tree-sitter-kat-tcl = { path = "../tree-sitter-kat-tcl" }
tree-sitter-kat-textile = { path = "../tree-sitter-kat-textile" }
tree-sitter-kat-textproto = { path = "../tree-sitter-kat-textproto" }
tree-sitter-kat-todotxt = { path = "../tree-sitter-kat-todotxt" }
tree-sitter-kat-tsv = { path = "../tree-sitter-kat-tsv" }
tree-sitter-kat-twig = { path = "../tree-sitter-kat-twig" }
tree-sitter-kat-typst = { path = "../tree-sitter-kat-typst" }
tree-sitter-kat-userscript-metadata = { path = "../tree-sitter-kat-userscript-metadata" }
tree-sitter-kat-vimhelp = { path = "../tree-sitter-kat-vimhelp" }
tree-sitter-kat-vue = { path = "../tree-sitter-kat-vue" }
tree-sitter-kat-vyper = { path = "../tree-sitter-kat-vyper" }
tree-sitter-kat-wgsl = { path = "../tree-sitter-kat-wgsl" }
